--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,14 +1,9 @@
 <h1>message update
 <br>
-<%= message.id %>のupdate page
+<%= @message.id %>のupdate page
 </h1>
 
-    <%= form_for(@message) do |f| %>
-    <%= f.label :content, 'メッセージ' %>
-    <%= f.text_field :content %>
-
-    <%= f.submit 'toukou' %>
- <% end %>
+<%= render 'form', message: @message %>
 
 
 <%= link_to 'back to list', messages_path %>
