--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,5 @@
 <h1>message new</h1>
-    <%= form_for(@message) do |f| %>
-    <%= f.label :content, 'メッセージ' %>
-    <%= f.text_field :content %>
-
-    <%= f.submit 'toukou' %>
- <% end %>
-
+<%= render 'form', message: @message %>
 
 <%= link_to 'back to list', messages_path %>
 
