--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,17 @@
 <%= form_for(message) do |f| %>
+
+    <% if message.errors.any? %>
+    <div id = "error_explation">
+        <ul>
+            <% message.errors.full_messages.each do |message| %>
+                <li>
+                    <%= message %>
+                </li>
+            <% end %>
+        </ul>
+    </div>
+    <% end %>
+
     <%= f.label :content, 'メッセージ' %>
     <%= f.text_field :content %>
     <%= f.submit 'toukou_kyoutsuka' %>
