--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
     <% end %>
 
-    <%= f.label :content, 'メッセージ' %>
-    <%= f.text_field :content %>
+    <%= f.label :title, 'titledesu' %><%= f.text_field :title %>
+    <%= f.label :content, 'メッセージ' %><%= f.text_field :content %>
     <%= f.submit 'toukou_kyoutsuka' %>
  <% end %>
