--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,6 +3,8 @@
     <% @messages.each do |message| %>
         <li>
             <%= link_to message.id, message %>
+
+            <%= message.title %> >>
             <%= message.content %>
         </li>
     <% end %>
