--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -3,6 +3,7 @@
     の詳細ページ
 </h1>
     <p>
+        <%= @message.title %> :
         <%= @message.content %>
     </p>
     <%= link_to 'back to list', messages_path %>
