--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,14 +1,22 @@
 <h1>messageList</h1>
 <ul>
-    <% @messages.each do |message| %>
-        <li>
-            <%= link_to message.id, message %>
-
-            <%= message.title %> >>
-            <%= message.content %>
-        </li>
-    <% end %>
-    
+    <table border = 1>
+        <tr>
+            <td>id</td>
+            <td>title</td>
+            <td>message</td>
+        </tr>
+        <% @messages.each do |message| %>
+            <tr>
+                <td><%= link_to message.id, message %></td>
+                <td><%= message.title %></td>
+                <td><%= message.content %></td>
+            </tr>
+        <% end %>
+    </table>
 </ul>
 
+<%= paginate @messages %>
 <%= link_to '新規メッセージの作成', new_message_path %>
+
+
