--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,11 +1,15 @@
 <h1>messageList</h1>
 <ul>
-    <table border = 1>
+    
+    <table class = "table table-striped">
+        <thead></thead>
         <tr>
             <td>id</td>
             <td>title</td>
             <td>message</td>
         </tr>
+        </thead>
+        <tbody>
         <% @messages.each do |message| %>
             <tr>
                 <td><%= link_to message.id, message %></td>
@@ -13,10 +17,13 @@
                 <td><%= message.content %></td>
             </tr>
         <% end %>
+        </tbody>
     </table>
 </ul>
-
+<div>
 <%= paginate @messages %>
-<%= link_to '新規メッセージの作成', new_message_path %>
+</div>
+
+<%= link_to '新規メッセージの作成', new_message_path, class:"btn btn-primary" %>
 
 
