--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,5 @@
 <h1>message new</h1>
 <%= render 'form', message: @message %>
 
-<%= link_to 'back to list', messages_path %>
+<%= link_to 'back to list', messages_path, class:"btn btn-primary" %>
 
