--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -2,11 +2,13 @@
     <%= @message.id %>
     の詳細ページ
 </h1>
-    <p>
-        <%= @message.title %> ::
-        <%= @message.content %>
-    </p>
-    <%= link_to 'back to list', messages_path %>
-    <%= link_to 'update message', edit_message_path(@message) %>
-    <%= link_to 'delete message',@message,method: :delete, data:{confirm:'本当に削除してよろしいですか'} %>
+    <table class="table table-bordered">
+        <tr><th>id</th><td><%= @message.id %></td></tr>
+        <tr><th>title</th><td><%= @message.title %></td></tr>
+        <tr><th>content</th><td><%= @message.content %></td></tr>
+         
+    </table>
+    <%= link_to 'back to list', messages_path ,class:'btn btn-default'%>
+    <%= link_to 'update message', edit_message_path(@message), class:'btn btn-default' %>
+    <%= link_to 'delete message',@message,method: :delete, data:{confirm:'本当に削除してよろしいですか'}, class:'btn btn-danger' %>
 
